--- a/papers.html
+++ b/papers.html
@@ -64,7 +64,7 @@
 
     <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
-  <div class="section_head"><a name="papers">Peer-reviewed publications</a></div>
+  <div class="section_head"><a name="papers">Peer-reviewed Publications</a></div>
 
     <p>
     <span class="title">Modeling the offensive-defensive interaction and resulting outcomes in basketball,</span>
