darker highlights, portrait credit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div id="content">
 
 <div style="float: right; width: 30%; padding: 10px; margin: 0 20px 5px 0">
-    <p><img src="images/Matt_Photo.jpg" width="100%"/></p>
+    <p><img src="images/Matt_Photo.jpg" title="Portrait by LauraDawn Heiner" width="100%"/></p>
 
 </div>
 
