Typo fix LLNL talk, green titles.

--- a/papers.html
+++ b/papers.html
@@ -84,14 +84,14 @@
 
   <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
-  <div class="section_head"><a name="dissertation">Dissertation</a></div>
+  <!-- <div class="section_head"><a name="dissertation">Dissertation</a></div> -->
 
 
-    <p>
-    <span class="title">Mixture modeling methods for Bayesian inference of nonlinear dynamics,</span>
-      M. J. Heiner, University of California, Santa Cruz.
+    <!-- <p> -->
+    <!-- <span class="title">Mixture modeling methods for Bayesian inference of nonlinear dynamics,</span> -->
+      <!-- M. J. Heiner, University of California, Santa Cruz. -->
     <!-- (<a href="publications/Dissertation.pdf">pdf</a>) <br> -->
-    </p>
+    <!-- </p> -->
 
 
   <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
