--- a/talks.html
+++ b/talks.html
@@ -66,7 +66,7 @@ Graduate Research Symposium, University of California, Santa Cruz, Santa Cruz, C
 </p>
 
 <p>
-<span class="title">The Interaction of Arctic sea ice and global temperature, and their bias in climate sim- ulation experiments.</span>
+<span class="title">The Interaction of Arctic sea ice and global temperature, and their bias in climate simulation experiments.</span>
 Engineering Summer Intern Seminar, Lawerence Livermore National Laboratory, Livermore, CA, August 2016.
 <!-- (<a href="talks/.pdf">slides</a>) -->
 </p>
