aligned menu and images; succinct bio

--- a/talks.html
+++ b/talks.html
@@ -20,7 +20,8 @@
 <div id="panel">
 
 <div id="header">
-    <img src="images/SouthBoxElder-2.jpg" title="'South Box Elder Peak' by Matt Heiner" width="100%"/>
+    <img src="images/SouthBoxElder-2.jpg" title="'South Box Elder Peak' by Matt Heiner" width=793 height=297/>
+    <!-- <img src="images/SouthBoxElder-2.jpg" title="'South Box Elder Peak' by Matt Heiner" width="100%"/> -->
     <!-- or is it 'Wheatfield after a storm', as I recall? -->
 </div>
 
