--- a/teaching.html
+++ b/teaching.html
@@ -20,7 +20,7 @@
 <div id="panel">
 
 <div id="header">
-    <img src="images/BoxElderFlowers-3.jpg" title="'Alpine Flowers on Box Elder Peak' by LauraDawn Heiner" width="100%"/>
+    <img src="images/BoxElderFlowers-3.jpg" title="'Alpine Flowers on Box Elder Peak' by LauraDawn Heiner" width=793 height=297/>
     <!-- or is it 'Wheatfield after a storm', as I recall? -->
 </div>
 
