fix header image width

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="panel">
 
 <div id="header">
-    <img src="images/NorthMountain_withName.jpg" title="'North Mountain' by LauraDawn Heiner" width=793 height=297/>
+    <img src="images/NorthMountain_withName.jpg" title="'North Mountain' by LauraDawn Heiner" width=795 height=298/>
 </div>
 
 
@@ -73,7 +73,7 @@
         <ul>
         <li> high-order Markovian time series,
         <li> order/model selection, and
-        <li> Bayesian nonparametrics;
+        <li> Bayesian nonparametrics
         </ul>
         applied to:
         <ul>
