--- a/teaching.html
+++ b/teaching.html
@@ -73,9 +73,9 @@ Launched 2017<br>
 <p>
 <a href="https://courses.soe.ucsc.edu/courses/ams7">Statistical Methods for the Biological, Environmental, and Health Sciences</a><br><br>
 AMS 7<br>
-Most recent: Summer 2018<br>
+Most recent: Winter 2019<br>
 UC Santa Cruz<br>
-<a href="courses/syllabus_ams7_su18.pdf">Syllabus</a><br>
+<a href="courses/syllabus_ams7_w2019.pdf">Syllabus</a><br>
 <div style="height: 10px"></div>
 </p>
 
@@ -105,7 +105,7 @@ UC Santa Cruz<br>
 
 
 <div id="footer">
-  &copy; 2018 Matthew J. Heiner
+  &copy; 2019 Matthew J. Heiner
 </div>
 
 </div>
