--- a/software.html
+++ b/software.html
@@ -59,8 +59,8 @@ GitHub <a href="https://github.com/mheiner/">page</a>.
 <p>
 <b>References</b><br>
 <span class="title">Structured priors for sparse probability vectors with application to model selection in Markov chains,</span>
-Heiner, M., Kottas, A., and Munch, S. (2019), Tech. Rep. UCSC-SOE-18-06, Jack Baskin School of Engineering, University of California, Santa Cruz.
-(<a href="https://www.soe.ucsc.edu/research/technical-reports/UCSC-SOE-18-06">link to paper</a>)
+Heiner, M., Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 29.
+(<a href="https://doi.org/10.1007/s11222-019-09856-2">link to paper</a>)
 </p>
 </p>
 
