added SharedIt link to SparseProbVec paper.

--- a/papers.html
+++ b/papers.html
@@ -63,7 +63,8 @@
     <p>
     <span class="title">Structured priors for sparse probability vectors with application to model selection in Markov chains,</span>
     <b>Heiner, M.</b>, Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 29.
-    (<a href="https://doi.org/10.1007/s11222-019-09856-2">link</a>)
+    (<a href="https://doi.org/10.1007/s11222-019-09856-2">link to article</a>)
+    (<a href="https://rdcu.be/bmtTa">link to SharedIt copy</a>)
     </p>
 
 
