MTD.jl live; updated graduation and teaching

--- a/teaching.html
+++ b/teaching.html
@@ -87,9 +87,9 @@ UC Santa Cruz<br>
 <p>
 <a href="https://courses.soe.ucsc.edu/courses/ams7L">Biostatistics Lab</a><br><br>
 AMS 7L<br>
-Most recent: Fall 2018<br>
+Most recent: Summer 2019<br>
 UC Santa Cruz<br>
-<a href="courses/syllabus_ams7L_fall18.pdf">Syllabus</a><br>
+<a href="courses/syllabusAMS7L_summer19.pdf">Syllabus</a><br>
 <div style="height: 10px"></div>
 </p>
 
