Added MTD_examples to Software

--- a/software.html
+++ b/software.html
@@ -70,7 +70,8 @@ Heiner, M., Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 2
 <p>
 <b>Julia</b> <br>
 
-<a href="https://github.com/mheiner/MTD.jl">MTD.jl</a> provides a Bayesian implementation of the MTD model, along with our extension for model selection. See the article for details.
+<a href="https://github.com/mheiner/MTD.jl">MTD.jl</a> provides a Bayesian implementation of the MTD model, along with our extension for model selection. See the article for details. Code for fitting and assessing the models is found in <a href="https://github.com/mheiner/MTD_examples.git">MTD_examples</a>.
+
 <p>
 
 <p>
