MMTD paper refs linked to arXiv

--- a/software.html
+++ b/software.html
@@ -77,9 +77,9 @@ Heiner, M., Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 2
 <p>
 
 <b>References</b><br>
-<span class="title">A Bayesian model for estimation and order selection in high order Markov chains,</span>
-Heiner, M., Kottas, A., and Munch, S. (2018), Tech. Rep. UCSC-SOE-18-07, Jack Baskin School of Engineering, University of California, Santa Cruz.
-(<a href="https://www.soe.ucsc.edu/research/technical-reports/UCSC-SOE-18-07">link to paper</a>)
+<span class="title">Estimation and selection for high-order Markov chains with Bayesian mixture transition distribution models,</span>
+<b>Heiner, M.</b> and Kottas, A. (2019+), <i>arXiv preprint arXiv:1906.10781</i>.
+(<a href="https://arxiv.org/abs/1906.10781">link to paper</a>)
 </p>
 </p>
 
