BNP WMAR code posted; March 2020 update

--- a/papers.html
+++ b/papers.html
@@ -49,8 +49,14 @@
   <!-- <div class="section_head"><a name="publications">Publications</a></div> -->
 
   <p>
+  <span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection,</span>
+  <b>Heiner, M.</b> and Kottas, A. (2020+), <i>arXiv preprint arXiv:</i>.
+  (<a href="https://arxiv.org/abs/">link to paper</a>)
+  </p>
+
+  <p>
   <span class="title">Estimation and selection for high-order Markov chains with Bayesian mixture transition distribution models,</span>
-  <b>Heiner, M.</b> and Kottas, A. (2019+), <i>arXiv preprint arXiv:1906.10781</i>.
+  <b>Heiner, M.</b> and Kottas, A. (2020+), <i>arXiv preprint arXiv:1906.10781</i>.
   (<a href="https://arxiv.org/abs/1906.10781">link</a>)
   </p>
 
@@ -108,7 +114,7 @@
 
 
 <div id="footer">
-  &copy; 2019 Matthew J. Heiner
+  &copy; 2020 Matthew J. Heiner
 </div>
 
 </div>
