--- a/teaching.html
+++ b/teaching.html
@@ -69,7 +69,23 @@ Launched 2017<br>
 
 
 <div class = "section_head"><a>Introductory Statistics</a></div>
-<img src="images/banana_slug.jpg" title="'Banana slug' by Matt Heiner" width="150" style = "float: left; margin: 20px" />
+
+<!-- <img src="images/banana_slug.jpg" title="'Banana slug' by Matt Heiner" width="150" style = "float: left; margin: 20px" /> -->
+<p>
+<a href="https://catalog.byu.edu/physical-and-mathematical-sciences/statistics/statistics-engineers-and-scientists">Statistics for Engineers and Scientists</a><br><br>
+STAT 201<br>
+Most recent: Winter 2020<br>
+Brigham Young University<br>
+<!-- <a href="courses/syllabus_ams7_w2019.pdf">Syllabus</a><br> -->
+<div style="height: 10px"></div>
+</p>
+
+
+<div style="clear: both; height: 5px;">&nbsp;</div>
+
+
+
+<!-- <img src="images/banana_slug.jpg" title="'Banana slug' by Matt Heiner" width="150" style = "float: left; margin: 20px" /> -->
 <p>
 <a href="https://courses.soe.ucsc.edu/courses/ams7">Statistical Methods for the Biological, Environmental, and Health Sciences</a><br><br>
 AMS 7<br>
@@ -83,7 +99,7 @@ UC Santa Cruz<br>
 <div style="clear: both; height: 5px;">&nbsp;</div>
 
 
-<img src="images/linearReg.png" title="'Regression' by Matt Heiner" width="150" style = "float: left; margin: 20px" />
+<!-- <img src="images/linearReg.png" title="'Regression' by Matt Heiner" width="150" style = "float: left; margin: 20px" /> -->
 <p>
 <a href="https://courses.soe.ucsc.edu/courses/ams7L">Biostatistics Lab</a><br><br>
 AMS 7L<br>
@@ -99,13 +115,30 @@ UC Santa Cruz<br>
 
 
 
+<div class = "section_head"><a>Probability & Inference</a></div>
+
+<p>
+<a href="https://catalog.byu.edu/physical-and-mathematical-sciences/statistics/probability-and-inference-1">Probability and Inference 1</a><br><br>
+STAT 240<br>
+Most recent: Fall 2019<br>
+Brigham Young University<br>
+<!-- <a href="courses/syllabus_ams7_w2019.pdf">Syllabus</a><br> -->
+<div style="height: 10px"></div>
+</p>
+
+
+<div style="clear: both; height: 5px;">&nbsp;</div>
+
+
+
+
 </div>
 
 <div style="clear: both; height: 100px;">&nbsp;</div>
 
 
 <div id="footer">
-  &copy; 2019 Matthew J. Heiner
+  &copy; 2020 Matthew J. Heiner
 </div>
 
 </div>
