--- a/software.html
+++ b/software.html
@@ -49,18 +49,22 @@ GitHub <a href="https://github.com/mheiner/">page</a>.
 </p>
 <div style="height: 25px"></div>
 
-<div class = "section_head"><a name="SparseProbVec">Sparse Probability Vectors</a></div>
+
+
+<div class = "section_head"><a name="BNP_WMAR">Bayesian Nonparametric Density Autoregression</a></div>
 <p>
-<b>Julia</b><br>
-<a href="https://github.com/mheiner/SparseProbVec.jl">SparseProbVec</a> provides functions to sample the sparse Dirichlet mixture and stick-breaking mixture distributions for probability vectors. See the article for details.
+<b>Julia</b> <br>
+
+<a href="https://github.com/mheiner/BNP_WMReg_Joint.jl">BNP_WMReg_Joint.jl</a> provides implementation of a nonparametric mixture of autoregressive models with lag selection. See the article for details. Code for fitting and assessing the models is found in <a href="https://github.com/mheiner/BNP_WMAR_examples.git">BNP_WMAR_examples</a>.
+
 <p>
-<b>R</b><br>
-<a href="https://github.com/mheiner/sparseProbVec">SparseProbVec</a> is an R package. See the <a href="https://github.com/mheiner/sparseProbVec/blob/master/R/tests/SBM_tests.R">test</a> script and function documentation for usage examples.
+
 <p>
+
 <b>References</b><br>
-<span class="title">Structured priors for sparse probability vectors with application to model selection in Markov chains,</span>
-Heiner, M., Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 29.
-(<a href="https://doi.org/10.1007/s11222-019-09856-2">link to paper</a>)
+<span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection,</span>
+<b>Heiner, M.</b> and Kottas, A. (2020+), <i>arXiv preprint arXiv:</i>.
+(<a href="https://arxiv.org/abs/">link to paper</a>)
 </p>
 </p>
 
@@ -85,13 +89,32 @@ Heiner, M., Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 2
 
 
 
+<div class = "section_head"><a name="SparseProbVec">Sparse Probability Vectors</a></div>
+<p>
+<b>Julia</b><br>
+<a href="https://github.com/mheiner/SparseProbVec.jl">SparseProbVec</a> provides functions to sample the sparse Dirichlet mixture and stick-breaking mixture distributions for probability vectors. See the article for details.
+<p>
+<b>R</b><br>
+<a href="https://github.com/mheiner/sparseProbVec">SparseProbVec</a> is an R package. See the <a href="https://github.com/mheiner/sparseProbVec/blob/master/R/tests/SBM_tests.R">test</a> script and function documentation for usage examples.
+<p>
+<b>References</b><br>
+<span class="title">Structured priors for sparse probability vectors with application to model selection in Markov chains,</span>
+Heiner, M., Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 29.
+(<a href="https://doi.org/10.1007/s11222-019-09856-2">link to paper</a>)
+</p>
+</p>
+
+
+
+
+
 </div>
 
 <div style="clear: both; height: 100px;">&nbsp;</div>
 
 
 <div id="footer">
-  &copy; 2019 Matthew J. Heiner
+  &copy; 2020 Matthew J. Heiner
 </div>
 
 </div>
