--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <!-- <div style="clear: both; height: 5px;">&nbsp;</div> -->
 
-  Download <a href="CH_Heiner202002.pdf">CV</a>.
+  Download <a href="CV_Heiner202002.pdf">CV</a>.
 
 
   <div style="clear: both; height: 20px;">&nbsp;</div>
