fixed link to BNP_WMReg_Joint repo

--- a/software.html
+++ b/software.html
@@ -55,7 +55,7 @@ GitHub <a href="https://github.com/mheiner/">page</a>.
 <p>
 <b>Julia</b> <br>
 
-<a href="https://github.com/mheiner/BNP_WMReg_Joint.jl">BNP_WMReg_Joint.jl</a> provides implementation of a nonparametric mixture of autoregressive models with lag selection. See the article for details. Code for fitting and assessing the models is found in <a href="https://github.com/mheiner/BNP_WMAR_examples.git">BNP_WMAR_examples</a>.
+<a href="https://github.com/mheiner/BNP_WMReg_Joint">BNP_WMReg_Joint.jl</a> provides implementation of a nonparametric mixture of autoregressive models with lag selection. See the article for details. Code for fitting and assessing the models is found in <a href="https://github.com/mheiner/BNP_WMAR_examples.git">BNP_WMAR_examples</a>.
 
 <p>
 
