Update CV, papers, talks, teaching, research description

--- a/index.html
+++ b/index.html
@@ -69,16 +69,17 @@
         <p>
         Specializing in stochastic modeling to draw inferences from data.
         <br>
-        Methodological research focuses on:
+        Research focuses on:
         <ul>
         <li> high-order Markovian time series,
         <li> order/model selection, and
         <li> Bayesian nonparametrics
         </ul>
-        applied to:
+        with applications in:
         <ul>
-        <li> estimating nonlinear population dynamics using
-        <li> statistical time-delay embedding.
+        <li> ecology,
+        <li> hydrology, and
+        <li> atmospheric biomonitoring.
         </ul>
         </p>
     </div>
@@ -89,7 +90,7 @@
 
   <!-- <div style="clear: both; height: 5px;">&nbsp;</div> -->
 
-  Download <a href="CV_Heiner_202002.pdf">CV</a>.
+  Download <a href="CV_Heiner_202010.pdf">CV</a>.
 
 
   <div style="clear: both; height: 20px;">&nbsp;</div>
