--- a/papers.html
+++ b/papers.html
@@ -51,7 +51,7 @@
   <p>
   <span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection,</span>
   <b>Heiner, M.</b> and Kottas, A. (2020+), <i>arXiv preprint arXiv:</i>.
-  (<a href="https://arxiv.org/abs/">link to paper</a>)
+  (<a href="https://arxiv.org/abs/">link</a>)
   </p>
 
   <p>
