--- a/talks.html
+++ b/talks.html
@@ -48,6 +48,17 @@
 
 <div class="section_head"><a name="talks">Talks and Posters</a></div>
 
+
+<p>
+  <span class="title">Estimation and Selection for High-order Markov chains with Mixture Transition Distribution Models.</span>
+  NBER-NSF SBIES Conference, Virtual, August 2020.
+  </p>
+  
+<p>
+   <span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection.</span>
+   Joint Statistical Meetings (JSM), Virtual, August 2020.
+</p>
+  
 <p>
 <span class="title">Bayesian model selection for Markov chains using sparse probability vectors.</span>
 Joint Statistical Meetings (JSM), Vancouver, BC, July 2018.
