--- a/teaching.html
+++ b/teaching.html
@@ -74,7 +74,7 @@ Launched 2017<br>
 <p>
 <a href="https://catalog.byu.edu/physical-and-mathematical-sciences/statistics/statistics-engineers-and-scientists">Statistics for Engineers and Scientists</a><br><br>
 STAT 201<br>
-Most recent: Winter 2020<br>
+Most recent: Fall 2020<br>
 Brigham Young University<br>
 <!-- <a href="courses/syllabus_ams7_w2019.pdf">Syllabus</a><br> -->
 <div style="height: 10px"></div>
