--- a/index.html
+++ b/index.html
@@ -67,13 +67,15 @@
     <div style="clear: left">
         <br>
         <p>
-        Specializing in stochastic modeling to draw inferences from data.
+        Dynamic and mixture modeling of complex dependent data via Markov chain Monte Carlo.
         <br>
-        Research focuses on:
+        <br>
+        Research interests:
         <ul>
-        <li> high-order Markovian time series,
-        <li> order/model selection, and
+        <li> hierarchical models
+        <li> time series analysis
         <li> Bayesian nonparametrics
+        <li> variable selection
         </ul>
         with applications in:
         <ul>
