--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div style="clear: left">
         <br>
         <p>
-        Dynamic and mixture modeling of complex dependent data via Markov chain Monte Carlo.
+        Dynamic and mixture modeling of complex, dependent data via Markov chain Monte Carlo.
         <br>
         <br>
         Research interests:
