added link to Google Scholar profile

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
   <!-- <div style="clear: both; height: 5px;">&nbsp;</div> -->
 
+  Google Scholar <a href="https://scholar.google.com/citations?user=FMVXoR4AAAAJ&hl=en&oi=ao">profile</a>.<div class=""></div>
   Download <a href="CV_Heiner_202010.pdf">CV</a>.
 
 
