added link to Research Gate profile

--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
 
 
   <!-- <div style="clear: both; height: 5px;">&nbsp;</div> -->
+  Download <a href="CV_Heiner_202010.pdf">CV</a>.<div class=""></div>
 
   Google Scholar <a href="https://scholar.google.com/citations?user=FMVXoR4AAAAJ&hl=en&oi=ao">profile</a>.<div class=""></div>
-  Download <a href="CV_Heiner_202010.pdf">CV</a>.
+
+  Research Gate <a href="https://www.researchgate.net/profile/Matthew_Heiner">profile</a>.
 
 
   <div style="clear: both; height: 20px;">&nbsp;</div>
