added GPMTD paper, talks, talk/paper title format

--- a/teaching.html
+++ b/teaching.html
@@ -120,7 +120,7 @@ UC Santa Cruz<br>
 <p>
 <a href="https://catalog.byu.edu/physical-and-mathematical-sciences/statistics/probability-and-inference-1">Probability and Inference 1</a><br><br>
 STAT 240<br>
-Most recent: Fall 2019<br>
+Most recent: Winter 2021<br>
 Brigham Young University<br>
 <!-- <a href="courses/syllabus_ams7_w2019.pdf">Syllabus</a><br> -->
 <div style="height: 10px"></div>
@@ -138,7 +138,7 @@ Brigham Young University<br>
 
 
 <div id="footer">
-  &copy; 2020 Matthew J. Heiner
+  &copy; 2021 Matthew J. Heiner
 </div>
 
 </div>
