--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <li> hierarchical models
         <li> time series analysis
         <li> Bayesian nonparametrics
+        <li> mixture models
         <li> variable selection
         </ul>
         with applications in:
@@ -91,7 +92,7 @@
 
 
   <!-- <div style="clear: both; height: 5px;">&nbsp;</div> -->
-  Download <a href="CV_Heiner_202010.pdf">CV</a>.<div class=""></div>
+  Download <a href="CV_Heiner_202106.pdf">CV</a>.<div class=""></div>
 
   Google Scholar <a href="https://scholar.google.com/citations?user=FMVXoR4AAAAJ&hl=en&oi=ao">profile</a>.<div class=""></div>
 
@@ -137,7 +138,7 @@
 
 
 <div id="footer">
-  &copy; 2020 Matthew J. Heiner
+  &copy; 2021 Matthew J. Heiner
 </div>
 
 </div>
