--- a/papers.html
+++ b/papers.html
@@ -42,22 +42,36 @@
 
 <div id="content">
 
-
   <div style="clear: both; height: 40px;">&nbsp;</div>
 
-  <div class="section_head"><a name="papers in prep">In Preparation</a></div>
+  <div class="section_head"><a name="papers in prep">In Progress</a></div>
   <!-- <div class="section_head"><a name="publications">Publications</a></div> -->
 
   <p>
-  <span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection,</span>
-  <b>Heiner, M.</b> and Kottas, A. (2020+), <i>arXiv preprint arXiv:</i>.
+  <span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection</span><br>
+  <b>Heiner, M.</b> and Kottas, A. (2021+), <i>arXiv preprint arXiv:</i>.
   (<a href="https://arxiv.org/abs/">link</a>)
   </p>
 
   <p>
-  <span class="title">Estimation and selection for high-order Markov chains with Bayesian mixture transition distribution models,</span>
-  <b>Heiner, M.</b> and Kottas, A. (2020+), <i>arXiv preprint arXiv:1906.10781</i>.
+  <span class="title">Estimation and selection for high-order Markov chains with Bayesian mixture transition distribution models</span><br>
+  <b>Heiner, M.</b> and Kottas, A. (2021+), <i>arXiv preprint arXiv:1906.10781</i>.
   (<a href="https://arxiv.org/abs/1906.10781">link</a>)
+  </p>
+
+  <p>
+    <span class="title">Model-based Clustering of Trends and Cycles of Nitrate Concentrations in Rivers Across France</span><br>
+    <b>Heiner, M.</b>, Heaton, M., Abbott, B., White, P., Minaudo, C., Dupas, R. (2021+).
+  </p>
+  
+  <p>
+    <span class="title">Multivariate Receptor Modeling with Widely Dispersed Lichens as Bioindicators of Air Quality</span><br>
+    <b>Heiner, M.</b>, Grimm, T., Smith, H., Leavitt, S., Christensen, W., Carling, G., St. Clair, L. (2021+).
+  </p>
+  
+  <p>
+    <span class="title">Trophic interactions, climate change and secondary wildfire interact to control soil water availability after wildfire</span><br>
+    Gilman, J., Gill, R., <b>Heiner, M.</b>, Hansen, N., (2021+).
   </p>
 
 
@@ -66,8 +80,15 @@
   <div class="section_head"><a name="papers">Peer-reviewed Publications</a></div>
 
 
+  <p>
+    <span class="title">Autoregressive Density Modeling with the Gaussian Process Mixture Transition Distribution</span><br>
+    <b>Heiner, M.</b> and Kottas, A. (2021), <i>Journal of Time Series Analysis</i>.
+    (<a href="https://onlinelibrary.wiley.com/doi/10.1111/jtsa.12603">link to article</a>)
+    </p>
+
+
     <p>
-    <span class="title">Structured priors for sparse probability vectors with application to model selection in Markov chains,</span>
+    <span class="title">Structured priors for sparse probability vectors with application to model selection in Markov chains</span><br>
     <b>Heiner, M.</b>, Kottas, A., and Munch, S. (2019), <i>Statistics and Computing</i>, 29.
     (<a href="https://doi.org/10.1007/s11222-019-09856-2">link to article</a>)
     (<a href="https://rdcu.be/bmtTa">link to SharedIt copy</a>)
@@ -75,15 +96,14 @@
 
 
     <p>
-    <span class="title">Modeling the offensive-defensive interaction and resulting outcomes in basketball,</span>
+    <span class="title">Modeling the offensive-defensive interaction and resulting outcomes in basketball</span><br>
     Lamas, L., Santana, F., <b>Heiner, M.</b>, Ugrinowitsch, C., and Fellingham, G. (2015), <i>PloS one</i>, 10, e0144435.
     <!-- <span class="place">(Submitted)</span>. -->
     (<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0144435">link</a>)
     </p>
 
-
     <p>
-    <span class="title">Skill importance in women’s soccer,</span>
+    <span class="title">Skill importance in women’s soccer</span><br>
     <b>Heiner, M.</b>, Fellingham, G., and Thomas, C. (2014), <i>Journal of Quantitative Analysis in Sports</i>, 10, 287-302.
     <!-- <span class="place">(Submitted)</span>. -->
     (<a href="https://doi.org/10.1515/jqas-2013-0119">link</a>)
@@ -114,7 +134,7 @@
 
 
 <div id="footer">
-  &copy; 2020 Matthew J. Heiner
+  &copy; 2021 Matthew J. Heiner
 </div>
 
 </div>
