--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <br>
         Research interests:
         <ul>
-        <li> hierarchical models
-        <li> time series analysis
         <li> Bayesian nonparametrics
+        <li> time series analysis
         <li> mixture models
-        <li> variable selection
+        <li> sparse signal recovery
+        <li> hierarchical modeling
         </ul>
         with applications in:
         <ul>
@@ -92,7 +92,7 @@
 
 
   <!-- <div style="clear: both; height: 5px;">&nbsp;</div> -->
-  Download <a href="CV_Heiner_202106.pdf">CV</a>.<div class=""></div>
+  Download <a href="CV_Heiner_202109.pdf">CV</a>.<div class=""></div>
 
   Google Scholar <a href="https://scholar.google.com/citations?user=FMVXoR4AAAAJ&hl=en&oi=ao">profile</a>.<div class=""></div>
 
