--- a/papers.html
+++ b/papers.html
@@ -44,42 +44,17 @@
 
   <div style="clear: both; height: 40px;">&nbsp;</div>
 
-  <div class="section_head"><a name="papers in prep">In Progress</a></div>
-  <!-- <div class="section_head"><a name="publications">Publications</a></div> -->
-
-  <p>
-  <span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection</span><br>
-  <b>Heiner, M.</b> and Kottas, A. (2021+), <i>arXiv preprint arXiv:</i>.
-  (<a href="https://arxiv.org/abs/">link</a>)
-  </p>
-
-  <p>
-  <span class="title">Estimation and selection for high-order Markov chains with Bayesian mixture transition distribution models</span><br>
-  <b>Heiner, M.</b> and Kottas, A. (2021+), <i>arXiv preprint arXiv:1906.10781</i>.
-  (<a href="https://arxiv.org/abs/1906.10781">link</a>)
-  </p>
-
-  <p>
-    <span class="title">Model-based Clustering of Trends and Cycles of Nitrate Concentrations in Rivers Across France</span><br>
-    <b>Heiner, M.</b>, Heaton, M., Abbott, B., White, P., Minaudo, C., Dupas, R. (2021+).
-  </p>
-  
-  <p>
-    <span class="title">Multivariate Receptor Modeling with Widely Dispersed Lichens as Bioindicators of Air Quality</span><br>
-    <b>Heiner, M.</b>, Grimm, T., Smith, H., Leavitt, S., Christensen, W., Carling, G., St. Clair, L. (2021+).
-  </p>
-  
-  <p>
-    <span class="title">Trophic interactions, climate change and secondary wildfire interact to control soil water availability after wildfire</span><br>
-    Gilman, J., Gill, R., <b>Heiner, M.</b>, Hansen, N., (2021+).
-  </p>
-
-
-    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
   <div class="section_head"><a name="papers">Peer-reviewed Publications</a></div>
 
 
+  <p>
+    <span class="title">Estimation and Selection for High-Order Markov Chains with Bayesian Mixture Transition Distribution Models</span><br>
+    <b>Heiner, M.</b> and Kottas, A. (2021), <i>Journal of Computational and Graphical Statistics</i>.
+    (<a href="https://www.tandfonline.com/doi/full/10.1080/10618600.2021.1979565">link to article</a>)
+    </p>
+
+    
   <p>
     <span class="title">Autoregressive Density Modeling with the Gaussian Process Mixture Transition Distribution</span><br>
     <b>Heiner, M.</b> and Kottas, A. (2021), <i>Journal of Time Series Analysis</i>.
@@ -99,15 +74,45 @@
     <span class="title">Modeling the offensive-defensive interaction and resulting outcomes in basketball</span><br>
     Lamas, L., Santana, F., <b>Heiner, M.</b>, Ugrinowitsch, C., and Fellingham, G. (2015), <i>PloS one</i>, 10, e0144435.
     <!-- <span class="place">(Submitted)</span>. -->
-    (<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0144435">link</a>)
+    (<a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0144435">link to article</a>)
     </p>
 
     <p>
     <span class="title">Skill importance in women’s soccer</span><br>
     <b>Heiner, M.</b>, Fellingham, G., and Thomas, C. (2014), <i>Journal of Quantitative Analysis in Sports</i>, 10, 287-302.
     <!-- <span class="place">(Submitted)</span>. -->
-    (<a href="https://doi.org/10.1515/jqas-2013-0119">link</a>)
+    (<a href="https://doi.org/10.1515/jqas-2013-0119">link to article</a>)
     </p>
+
+
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
+
+    
+  <div class="section_head"><a name="papers in prep">In Progress</a></div>
+  <!-- <div class="section_head"><a name="publications">Publications</a></div> -->
+
+  <p>
+  <span class="title">Bayesian Nonparametric Density Autoregression with Lag Selection</span><br>
+  <b>Heiner, M.</b> and Kottas, A. (2021+), <i>arXiv preprint arXiv:</i>.
+  (<a href="https://arxiv.org/abs/">link</a>)
+  </p>
+
+  <p>
+    <span class="title">Model-based Clustering of Trends and Cycles of Nitrate Concentrations in Rivers Across France</span><br>
+    <b>Heiner, M.</b>, Heaton, M., Abbott, B., White, P., Minaudo, C., Dupas, R. (2021+).
+  </p>
+  
+  <p>
+    <span class="title">Multivariate Receptor Modeling with Widely Dispersed Lichens as Bioindicators of Air Quality</span><br>
+    <b>Heiner, M.</b>, Grimm, T., Smith, H., Leavitt, S., Christensen, W., Carling, G., St. Clair, L. (2021+).
+  </p>
+  
+  <p>
+    <span class="title">Trophic interactions, climate change and secondary wildfire interact to control soil water availability after wildfire</span><br>
+    Gilman, J., Gill, R., <b>Heiner, M.</b>, Hansen, N., (2021+).
+  </p>
+
 
 
   <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
